--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 					</div>
 					<div class="logo_footer">
 						
-							<a href="#"><img src="images/logo.png" style=" height: 100%, width: 100%"></a>
+							<a href="index.html"><img src="images/logo.png" style=" height: 100%, width: 100%"></a>
 						
 					</div>
 					<div class="icon-bar">
